Bug 99703 - Crash at document close after having unfolded style list
Summary: Crash at document close after having unfolded style list
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: All All
: medium normal
Assignee: David Tardon
URL:
Whiteboard: target:5.2.0
Keywords: bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2016-05-06 07:01 UTC by Julien Nabet
Modified: 2016-10-25 19:01 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with symbols (11.97 KB, text/plain)
2016-05-06 07:01 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2016-05-06 07:01:11 UTC
Created attachment 124876 [details]
bt with symbols

On pc Debian x86-64 with master sources updated today (ee5850893e15acda1d7ce7cf17da7c80f2fa810a), I had a crash when closing LO after having unfolded style list.

Steps to reproduce:
- open brand new file Writer
- Type F11 so style list appears
- unfold Heading list by clicking on the small triangle
- close doc
=> Crash

(LO profile directory has been renamed for having a brand new one)

Same crash with Calc too.
Comment 1 David Tardon 2016-05-06 07:22:19 UTC
Caused by my commit 9ff1d7f8140de1224bb37fba0cb266a58f37e66d . I'll revert it for now.
Comment 2 Commit Notification 2016-05-06 07:28:26 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fe4ac23ed8054a8e863d911c6fb0a38c4449672a

tdf#99703 Revert "improve perf. of VCL event dispatch"

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Julien Nabet 2016-05-06 11:47:12 UTC
Thank you David for your quick fix!
I confirmed it's ok with 27014f563577c3c5da19e37a57d4e73c0ebae140 (so including your new patch).