tdf#99703 Revert "improve perf. of VCL event dispatch"

... as it causes a crash at exit.

This reverts commit 9ff1d7f8140de1224bb37fba0cb266a58f37e66d.

Change-Id: I48bfd8974e6ed6c5ba3f8282eb8717f685d580be